Generate xml coverage

--- a/tox.ini
+++ b/tox.ini
@@ -14,4 +14,4 @@ envlist=py36
 deps=
   pytest
   pytest-cov
-commands=py.test --cov {envsitepackagesdir}/ecological --cov-report term-missing .
+commands=py.test --cov {envsitepackagesdir}/ecological --cov-report term-missing --cov-report xml .
