--- a/Pipfile
+++ b/Pipfile
@@ -1,19 +1,15 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
 
-
-
 [dev-packages]
-
 tox = "*"
-
+pylint = "*"
+pytest = "*"
+pytest-cov = "*"
 
 [requires]
-
-python_version = "3.6"
+python_version = "3"
