--- a/tox.ini
+++ b/tox.ini
@@ -5,10 +5,12 @@ select = E,W,F,N,I
 ignore = W503
 
 [tox]
-envlist=py3
+envlist=py36, py37
 
 [tox:travis]
-3=py3
+3.6=py3.6
+3.7=py3.7
+
 
 [testenv]
 deps=
