Add black to dev dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ tox = "*"
 pylint = "*"
 pytest = "*"
 pytest-cov = "*"
+black = "*"
 
 [requires]
 python_version = "3"
+
+[pipenv]
+allow_prereleases = true
