--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: xenial
 language: python
 python: ["3.6", "3.7"]
 before_install: pip install poetry
-install: poetry install -E ci
+install: poetry install
 script: python -m pytest ecological --cov-report term-missing --cov-report xml 
 after_success:
   - python-codacy-coverage -r coverage.xml
