Proper tests path for pytest

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python: ["3.6", "3.7"]
 before_install: pip install poetry
 install: poetry install
-script: python -m pytest ecological --cov-report term-missing --cov-report xml 
+script: poetry run python -m pytest ecological --cov-report term-missing --cov-report xml tests/
 after_success:
   - python-codacy-coverage -r coverage.xml
 env:
