--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,8 @@ language: python
 python: ["3.6", "3.7"]
 before_install: pip install poetry
 install: poetry install
-script: poetry run python -m pytest ecological --cov-report term-missing --cov-report xml tests/
+script: poetry run python -m pytest ecological --cov ecological/ --cov-report xml tests/
 after_success:
-  - printenv
-  - ls -al
-  - pwd
   - python-codacy-coverage -r coverage.xml
 env:
   - secure: >-
