--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ pytest-cov = "^2.7"
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
 rope = "^0.14.0"
 flake8 = "^3.7"
+doc8 = "^0.8.0"
+pygments = "^2.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
