--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.6"
-dataclasses = "^0.6.0"
+dataclasses = { version = "^0.6.0",  markers = "python_version < '3.7'"}
 
 [tool.poetry.dev-dependencies]
 tox = "^3.12"
