--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,37 @@
-[tool.poetry]
+[project]
 name = "ecological"
-version = "2.0.0"
+version = "3.0.0"
 description = "Map a Python configuration from environment variables"
-authors = [
-    "João Santos <jmcs@jsantos.eu>",
-    "Marcin Zaremba <mrcn.zrmb@gmail.com>"
-]
-license = "MIT"
 readme = "README.rst"
-homepage = "https://github.com/jmcs/ecological"
-repository = "https://github.com/jmcs/ecological"
+license = { file = "LICENSE" }
+requires-python = ">=3.10"
+authors = [
+    { name = "João Santos", email = "jmcs@jsantos.eu" },
+    { name = "Marcin Zaremba", email = "mrcn.zrmb@gmail.com" }
+]
 classifiers = [
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.6",
-    "Programming Language :: Python :: 3.7",
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Operating System :: OS Independent"
 ]
+dependencies = [
+    "dataclasses>=0.8.0,<1.0.0"
+]
 
-[tool.poetry.dependencies]
-python = "^3.6"
-dataclasses = "^0.6.0"
+[project.urls]
+Homepage = "https://github.com/jmcs/ecological"
+Repository = "https://github.com/jmcs/ecological"
 
-[tool.poetry.dev-dependencies]
-tox = "^3.12"
-pytest = "^4.6"
-pytest-cov = "^2.7"
-black = {version = "^18.3-alpha.0",allows-prereleases = true}
-rope = "^0.14.0"
-flake8 = "^3.7"
-doc8 = "^0.8.0"
-pygments = "^2.4"
+[dependency-groups]
+dev = [
+    "pytest>=9.0.0,<10.0.0",
+    "pytest-cov>=7.0.0,<8.0.0",
+    "pygments>=2.19.2,<3.0.0",
+    "ty",
+    "ruff"
+]
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
